# opencloud-pocketid-mcp

./: .env.example  Dockerfile  README.md  SKILL.md  docker-compose.yml  pyproject.toml
src/: auth.py  caldav_server.py  carddav_server.py  config.py  main.py  utils.py  webdav_server.py
tests/: test_caldav.py  test_carddav.py  test_utils.py  test_webdav.py
